--- a/Objects/WeatherMonitor.build_log.htm
+++ b/Objects/WeatherMonitor.build_log.htm
@@ -5,228 +5,40 @@
 <h2>Tool Versions:</h2>
 IDE-Version: µVision V5.33.0.0
 Copyright (C) 2020 ARM Ltd and ARM Germany GmbH. All rights reserved.
-License Information: Taylor Artunian, San Francisco State University, LIC=----
+License Information: Christopher Pham, SFSU, LIC=----
  
 Tool Versions:
 Toolchain:       MDK-Lite  Version: 5.33.0.0
-Toolchain Path:  C:\Keil_v5\ARM\ARMCLANG\Bin
-C Compiler:      ArmClang.exe V6.15
-Assembler:       Armasm.exe V6.15
-Linker/Locator:  ArmLink.exe V6.15
-Library Manager: ArmAr.exe V6.15
-Hex Converter:   FromElf.exe V6.15
+Toolchain Path:  C:\Keil_v5\ARM\ARMCC\Bin
+C Compiler:      Armcc.exe V5.06 update 7 (build 960)
+Assembler:       Armasm.exe V5.06 update 7 (build 960)
+Linker/Locator:  ArmLink.exe V5.06 update 7 (build 960)
+Library Manager: ArmAr.exe V5.06 update 7 (build 960)
+Hex Converter:   FromElf.exe V5.06 update 7 (build 960)
 CPU DLL:         SARMCM3.DLL V5.33.0.0
 Dialog DLL:      DCM.DLL V1.17.3.0
 Target DLL:      lmidk-agdi.dll V???
 Dialog DLL:      TCM.DLL V1.48.0.0
  
 <h2>Project:</h2>
-C:\Users\tartunian\repos\engr478\ENGR478-WeatherMonitor\WeatherMonitor.uvprojx
-Project File Date:  05/16/2021
+C:\478 Final\ENGR478-WeatherMonitor\WeatherMonitor.uvprojx
+Project File Date:  05/17/2021
 
 <h2>Output:</h2>
-*** Using Compiler 'V6.15', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
-Build target 'Target 1'
-i2clib.c(14): warning: passing an object that undergoes default argument promotion to 'va_start' has undefined behavior [-Wvarargs]
-    va_start(vargs, num_of_args);
-                    ^
-i2clib.c(3): note: parameter of type 'uint8_t' (aka 'unsigned char') is declared here
-void I2CSend(uint8_t slave_addr, uint8_t num_of_args, ...)
-                                         ^
-i2clib.c(17): warning: implicit conversion loses integer precision: 'uint32_t' (aka 'unsigned int') to 'uint8_t' (aka 'unsigned char') [-Wimplicit-int-conversion]
-    I2CMasterDataPut(I2C0_BASE, va_arg(vargs, uint32_t));
-    ~~~~~~~~~~~~~~~~            ^~~~~~~~~~~~~~~~~~~~~~~
-C:\Keil_v5\ARM\ARMCLANG\Bin\..\include\stdarg.h(43): note: expanded from macro 'va_arg'
-  #define va_arg(ap, type)    __builtin_va_arg(ap, type)
-                              ^~~~~~~~~~~~~~~~~~~~~~~~~~
-i2clib.c(48): warning: implicit conversion loses integer precision: 'uint32_t' (aka 'unsigned int') to 'uint8_t' (aka 'unsigned char') [-Wimplicit-int-conversion]
-            I2CMasterDataPut(I2C0_BASE, va_arg(vargs, uint32_t));
-            ~~~~~~~~~~~~~~~~            ^~~~~~~~~~~~~~~~~~~~~~~
-C:\Keil_v5\ARM\ARMCLANG\Bin\..\include\stdarg.h(43): note: expanded from macro 'va_arg'
-  #define va_arg(ap, type)    __builtin_va_arg(ap, type)
-                              ^~~~~~~~~~~~~~~~~~~~~~~~~~
-i2clib.c(57): warning: implicit conversion loses integer precision: 'uint32_t' (aka 'unsigned int') to 'uint8_t' (aka 'unsigned char') [-Wimplicit-int-conversion]
-        I2CMasterDataPut(I2C0_BASE, va_arg(vargs, uint32_t));
-        ~~~~~~~~~~~~~~~~            ^~~~~~~~~~~~~~~~~~~~~~~
-C:\Keil_v5\ARM\ARMCLANG\Bin\..\include\stdarg.h(43): note: expanded from macro 'va_arg'
-  #define va_arg(ap, type)    __builtin_va_arg(ap, type)
-                              ^~~~~~~~~~~~~~~~~~~~~~~~~~
-i2clib.c(72): warning: implicit conversion loses integer precision: 'uint32_t' (aka 'unsigned int') to 'uint8_t' (aka 'unsigned char') [-Wimplicit-int-conversion]
-    I2CMasterSlaveAddrSet(I2C0_BASE, slave_addr, false);
-    ~~~~~~~~~~~~~~~~~~~~~            ^~~~~~~~~~
-i2clib.c(84): warning: implicit conversion loses integer precision: 'uint32_t' (aka 'unsigned int') to 'uint8_t' (aka 'unsigned char') [-Wimplicit-int-conversion]
-    I2CMasterSlaveAddrSet(I2C0_BASE, slave_addr, true);
-    ~~~~~~~~~~~~~~~~~~~~~            ^~~~~~~~~~
-i2clib.c(94): warning: implicit conversion loses integer precision: 'uint32_t' (aka 'unsigned int') to 'uint8_t' (aka 'unsigned char') [-Wimplicit-int-conversion]
-    return I2CMasterDataGet(I2C0_BASE);
-    ~~~~~~ ^~~~~~~~~~~~~~~~~~~~~~~~~~~
-i2clib.c(114): warning: implicit conversion loses integer precision: 'uint32_t' (aka 'unsigned int') to 'uint8_t' (aka 'unsigned char') [-Wimplicit-int-conversion]
-    I2CMasterSlaveAddrSet(I2C0_BASE, slave_addr, false);
-    ~~~~~~~~~~~~~~~~~~~~~            ^~~~~~~~~~
-i2clib.c(126): warning: implicit conversion loses integer precision: 'uint32_t' (aka 'unsigned int') to 'uint8_t' (aka 'unsigned char') [-Wimplicit-int-conversion]
-    I2CMasterSlaveAddrSet(I2C0_BASE, slave_addr, true);
-    ~~~~~~~~~~~~~~~~~~~~~            ^~~~~~~~~~
-i2clib.c(136): warning: implicit conversion loses integer precision: 'uint32_t' (aka 'unsigned int') to 'uint8_t' (aka 'unsigned char') [-Wimplicit-int-conversion]
-    return I2CMasterDataGet(I2C0_BASE);
-    ~~~~~~ ^~~~~~~~~~~~~~~~~~~~~~~~~~~
-10 warnings generated.
-compiling i2clib.c...
-main.c(87): warning: implicit conversion turns floating-point number into integer: 'double' to 'uint16_t' (aka 'unsigned short') [-Wfloat-conversion]
-    return 175.72*raw/65536.0f-46.85;
-    ~~~~~~ ~~~~~~~~~~~~~~~~~~~^~~~~~
-main.c(87): warning: implicit conversion increases floating-point precision: 'float' to 'double' [-Wdouble-promotion]
-    return 175.72*raw/65536.0f-46.85;
-                     ~^~~~~~~~
-main.c(91): warning: implicit conversion turns floating-point number into integer: 'double' to 'uint16_t' (aka 'unsigned short') [-Wfloat-conversion]
-    return ConvertToC(raw)*1.8+32;
-    ~~~~~~ ~~~~~~~~~~~~~~~~~~~^~~
-main.c(95): warning: implicit conversion turns floating-point number into integer: 'float' to 'uint16_t' (aka 'unsigned short') [-Wfloat-conversion]
-    return 125*raw/65536.0f-6;
-    ~~~~~~ ~~~~~~~~~~~~~~~~^~
-main.c(193): warning: format string is not a string literal [-Wformat-nonliteral]
-    vsnprintf( buf, 256, format, args );
-                         ^~~~~~
-main.c(218): warning: no previous prototype for function 'HTU21Send' [-Wmissing-prototypes]
-void HTU21Send(uint8_t reg) {
-     ^
-main.c(218): note: declare 'static' if the function is not intended to be used outside of this translation unit
-void HTU21Send(uint8_t reg) {
-^
-static 
-main.c(259): warning: implicit conversion loses integer precision: 'uint32_t' (aka 'unsigned int') to 'uint16_t' (aka 'unsigned short') [-Wimplicit-int-conversion]
-    return_val[1] =  I2CMasterDataGet(I2C0_BASE);
-                  ~  ^~~~~~~~~~~~~~~~~~~~~~~~~~~
-main.c(264): warning: implicit conversion loses integer precision: 'uint32_t' (aka 'unsigned int') to 'uint16_t' (aka 'unsigned short') [-Wimplicit-int-conversion]
-    return_val[0] =  I2CMasterDataGet(I2C0_BASE);
-                  ~  ^~~~~~~~~~~~~~~~~~~~~~~~~~~
-main.c(266): warning: implicit conversion changes signedness: 'int' to 'uint32_t' (aka 'unsigned int') [-Wsign-conversion]
-    return return_val[1] << 8 | return_val[0];
-    ~~~~~~ ~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~
-main.c(269): warning: no previous extern declaration for non-static variable 'i' [-Wmissing-variable-declarations]
-uint8_t i = 0;
-        ^
-main.c(269): note: declare 'static' if the variable is not intended to be used outside of this translation unit
-uint8_t i = 0;
-^
-main.c(278): warning: implicit conversion loses integer precision: 'uint32_t' (aka 'unsigned int') to 'uint16_t' (aka 'unsigned short') [-Wimplicit-int-conversion]
-    humidity = ConvertToRH( HTU21Receive() );                           // Receive the last humidity reading and convert to relative humidity
-               ~~~~~~~~~~~  ^~~~~~~~~~~~~~
-main.c(280): warning: implicit conversion loses integer precision: 'uint32_t' (aka 'unsigned int') to 'uint16_t' (aka 'unsigned short') [-Wimplicit-int-conversion]
-    temperature = ConvertToF( HTU21Receive() );                         // Receive the last temperature reading and convert to Fahrenheit
-                  ~~~~~~~~~~  ^~~~~~~~~~~~~~
-main.c(286): warning: no previous prototype for function 'ConfigureOutputPort' [-Wmissing-prototypes]
-void ConfigureOutputPort(void) {
-     ^
-main.c(286): note: declare 'static' if the function is not intended to be used outside of this translation unit
-void ConfigureOutputPort(void) {
-^
-static 
-main.c(337): warning: implicit conversion changes signedness: 'int' to 'uint8_t' (aka 'unsigned char') [-Wsign-conversion]
-        GPIOPinWrite(GPIO_PORTE_BASE, GPIO_PIN_1, ~GPIO_PIN_1);
-        ~~~~~~~~~~~~                              ^~~~~~~~~~~
-main.c(341): warning: 'return' will never be executed [-Wunreachable-code-return]
-                return 0;
-                       ^
-main.c(55): warning: no previous extern declaration for non-static variable 'wake_interval' [-Wmissing-variable-declarations]
-uint32_t    wake_interval;
-            ^
-main.c(55): note: declare 'static' if the variable is not intended to be used outside of this translation unit
-uint32_t    wake_interval;
-^
-main.c(57): warning: no previous extern declaration for non-static variable 'humidity' [-Wmissing-variable-declarations]
-uint16_t    humidity;
-            ^
-main.c(57): note: declare 'static' if the variable is not intended to be used outside of this translation unit
-uint16_t    humidity;
-^
-main.c(58): warning: no previous extern declaration for non-static variable 'temperature' [-Wmissing-variable-declarations]
-uint16_t    temperature;
-            ^
-main.c(58): note: declare 'static' if the variable is not intended to be used outside of this translation unit
-uint16_t    temperature;
-^
-main.c(59): warning: no previous extern declaration for non-static variable 'configuration' [-Wmissing-variable-declarations]
-uint16_t    configuration;
-            ^
-main.c(59): note: declare 'static' if the variable is not intended to be used outside of this translation unit
-uint16_t    configuration;
-^
-main.c(60): warning: no previous extern declaration for non-static variable 'resolution' [-Wmissing-variable-declarations]
-uint8_t     resolution;
-            ^
-main.c(60): note: declare 'static' if the variable is not intended to be used outside of this translation unit
-uint8_t     resolution;
-^
-main.c(61): warning: no previous extern declaration for non-static variable 'vdd_status' [-Wmissing-variable-declarations]
-uint8_t     vdd_status;
-            ^
-main.c(61): note: declare 'static' if the variable is not intended to be used outside of this translation unit
-uint8_t     vdd_status;
-^
-main.c(62): warning: no previous extern declaration for non-static variable 'heater_status' [-Wmissing-variable-declarations]
-uint8_t     heater_status;
-            ^
-main.c(62): note: declare 'static' if the variable is not intended to be used outside of this translation unit
-uint8_t     heater_status;
-^
-22 warnings generated.
-compiling main.c...
+*** Using Compiler 'V5.06 update 7 (build 960)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
+Rebuild target 'Target 1'
 assembling startup_rvmdk.S...
-libs/ssd1306/oled_font_source_pro.c(6): warning: no previous extern declaration for non-static variable 'source_pro' [-Wmissing-variable-declarations]
-const fontDescList source_pro[TOTAL_CHAR] = {
-                   ^
-libs/ssd1306/oled_font_source_pro.c(6): note: declare 'static' if the variable is not intended to be used outside of this translation unit
-const fontDescList source_pro[TOTAL_CHAR] = {
-      ^
-1 warning generated.
+startup_rvmdk.S(81): error: A1163E: Unknown opcode ADC0_Handler , expecting opcode or Macro
+compiling i2clib.c...
 compiling oled_font_source_pro.c...
-libs/ssd1306/ssd1306_utils.c(89): warning: implicit conversion loses integer precision: 'const uint32_t' (aka 'const unsigned int') to 'uint8_t' (aka 'unsigned char') [-Wimplicit-int-conversion]
-  ssd1306Write(COMMAND, startColCoordinate);
-  ~~~~~~~~~~~~          ^~~~~~~~~~~~~~~~~~
-libs/ssd1306/ssd1306_utils.c(90): warning: implicit conversion loses integer precision: 'const uint32_t' (aka 'const unsigned int') to 'uint8_t' (aka 'unsigned char') [-Wimplicit-int-conversion]
-  ssd1306Write(COMMAND, endColCoordinate);
-  ~~~~~~~~~~~~          ^~~~~~~~~~~~~~~~
-libs/ssd1306/ssd1306_utils.c(98): warning: implicit conversion loses integer precision: 'const uint32_t' (aka 'const unsigned int') to 'uint8_t' (aka 'unsigned char') [-Wimplicit-int-conversion]
-  ssd1306Write(COMMAND, startPageCoordinate);
-  ~~~~~~~~~~~~          ^~~~~~~~~~~~~~~~~~~
-libs/ssd1306/ssd1306_utils.c(99): warning: implicit conversion loses integer precision: 'const uint32_t' (aka 'const unsigned int') to 'uint8_t' (aka 'unsigned char') [-Wimplicit-int-conversion]
-  ssd1306Write(COMMAND, endPageCoordinate);
-  ~~~~~~~~~~~~          ^~~~~~~~~~~~~~~~~
-4 warnings generated.
-compiling ssd1306_utils.c...
 compiling ssd1306.c...
-C:/ti/TivaWare_C_Series-2.1.4.178/utils/uartstdio.c(535): warning: implicit conversion changes signedness: 'unsigned int' to 'int' [-Wsign-conversion]
-    return(uIdx);
-    ~~~~~~ ^~~~
-C:/ti/TivaWare_C_Series-2.1.4.178/utils/uartstdio.c(668): warning: implicit conversion loses integer precision: 'int32_t' (aka 'int') to 'int8_t' (aka 'signed char') [-Wimplicit-int-conversion]
-        cChar = MAP_UARTCharGet(g_ui32Base);
-              ~ ^~~~~~~~~~~~~~~~~~~~~~~~~~~
-C:/ti/TivaWare_C_Series-2.1.4.178\driverlib/rom_map.h(5178): note: expanded from macro 'MAP_UARTCharGet'
-        UARTCharGet
-        ^
-C:/ti/TivaWare_C_Series-2.1.4.178/utils/uartstdio.c(739): warning: implicit conversion changes signedness: 'int8_t' (aka 'signed char') to 'char' [-Wsign-conversion]
-            pcBuf[ui32Count] = cChar;
-                             ~ ^~~~~
-C:/ti/TivaWare_C_Series-2.1.4.178/utils/uartstdio.c(749): warning: implicit conversion changes signedness: 'int8_t' (aka 'signed char') to 'unsigned char' [-Wsign-conversion]
-            MAP_UARTCharPut(g_ui32Base, cChar);
-            ~~~~~~~~~~~~~~~             ^~~~~
-C:/ti/TivaWare_C_Series-2.1.4.178/utils/uartstdio.c(766): warning: implicit conversion changes signedness: 'uint32_t' (aka 'unsigned int') to 'int' [-Wsign-conversion]
-    return(ui32Count);
-    ~~~~~~ ^~~~~~~~~
-C:/ti/TivaWare_C_Series-2.1.4.178/utils/uartstdio.c(817): warning: implicit conversion loses integer precision: 'int32_t' (aka 'int') to 'unsigned char' [-Wimplicit-int-conversion]
-    return(MAP_UARTCharGet(g_ui32Base));
-    ~~~~~~ ^~~~~~~~~~~~~~~~~~~~~~~~~~~
-C:/ti/TivaWare_C_Series-2.1.4.178\driverlib/rom_map.h(5178): note: expanded from macro 'MAP_UARTCharGet'
-        UARTCharGet
-        ^
-C:/ti/TivaWare_C_Series-2.1.4.178/utils/uartstdio.c(1004): warning: implicit conversion changes signedness: 'int32_t' (aka 'int') to 'uint32_t' (aka 'unsigned int') [-Wsign-conversion]
-                        ui32Value = -(int32_t)ui32Value;
-                                  ~ ^~~~~~~~~~~~~~~~~~~
-7 warnings generated.
+compiling ssd1306_utils.c...
 compiling uartstdio.c...
-linking...
-Program Size: Code=15636 RO-data=2824 RW-data=2668 ZI-data=640  
-".\Objects\WeatherMonitor.axf" - 0 Error(s), 44 Warning(s).
+compiling main.c...
+main.c(384): warning:  #111-D: statement is unreachable
+  		return 0;
+main.c: 1 warning, 0 errors
+".\Objects\WeatherMonitor.axf" - 1 Error(s), 1 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -236,10 +48,11 @@ Package Vendor: Keil
                 Texas Instruments Tiva C Series Device Support and Examples
 
 <h2>Collection of Component include folders:</h2>
-  C:\Users\tartunian\AppData\Local\Arm\Packs\Keil\TM4C_DFP\1.1.0\Device\Include\TM4C123
+  C:\Users\Chris\AppData\Local\Arm\Packs\Keil\TM4C_DFP\1.1.0\Device\Include\TM4C123
 
 <h2>Collection of Component Files used:</h2>
-Build Time Elapsed:  00:00:02
+Target not created.
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
