photoresitor function added and properly updates

--- a/Objects/WeatherMonitor.build_log.htm
+++ b/Objects/WeatherMonitor.build_log.htm
@@ -28,17 +28,18 @@ Project File Date:  05/17/2021
 *** Using Compiler 'V5.06 update 7 (build 960)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Rebuild target 'Target 1'
 assembling startup_rvmdk.S...
-startup_rvmdk.S(81): error: A1163E: Unknown opcode ADC0_Handler , expecting opcode or Macro
 compiling i2clib.c...
 compiling oled_font_source_pro.c...
 compiling ssd1306.c...
 compiling ssd1306_utils.c...
 compiling uartstdio.c...
 compiling main.c...
-main.c(384): warning:  #111-D: statement is unreachable
+main.c(416): warning:  #111-D: statement is unreachable
   		return 0;
 main.c: 1 warning, 0 errors
-".\Objects\WeatherMonitor.axf" - 1 Error(s), 1 Warning(s).
+linking...
+Program Size: Code=16872 RO-data=2820 RW-data=2668 ZI-data=628  
+".\Objects\WeatherMonitor.axf" - 0 Error(s), 1 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -51,7 +52,6 @@ Package Vendor: Keil
   C:\Users\Chris\AppData\Local\Arm\Packs\Keil\TM4C_DFP\1.1.0\Device\Include\TM4C123
 
 <h2>Collection of Component Files used:</h2>
-Target not created.
 Build Time Elapsed:  00:00:01
 </pre>
 </body>
